--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-router-dom": "^6.4.3",
     "react-table": "^7.8.0",
     "recharts": "^2.1.16"
   },
